styles.css
*,*::before,*::after{

    box-sizing: border-box;
 

}


* {

    margin: 0px;
    padding: 0px;

}

.container {

    font-family: 'Courier New', Courier, monospace ;
    height: 100vh;
    background-color: rgba(217, 250, 250,1);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}


.title {

    text-align: center; 
    padding: 50px;
    color: rgb(115, 96, 124);
    
}


.layout {

    display: flex;
    justify-content: space-evenly;
    align-items: center;  
    
}

.canvas {

    width: 600px;
    height: 600px; 
    border: 5px solid rgb(238, 238, 238);
    display: flex;
    box-shadow: 1px 1px 20px 13px rgb(115, 96, 124);  
    
}


.gridRow {

    flex: 1;
    border-bottom: 2px solid rgb(139, 139, 139);
    --cell-opacity: 0;
}




.gridColumn {
    
    flex: 1;
    border: 1px solid rgb(139, 139, 139);
    display: flex;
    flex-direction: column;
    
}

li {
    
    list-style: none ;
    margin-bottom: 30px;
    text-align: center;
    padding: 10px;
    color: rgb(87, 38, 110);
    font-size: 1.3rem;
    font-style: italic;
    border: 1px solid rgb(139, 139, 139);
    box-shadow: 1px 1px 2px 1px rgb(115, 96, 124);
    border-radius: 10px;
    cursor: pointer;
    transition: 120ms;
   
}

.clicked {

    background-color: rgb(196, 194, 194);
    scale: 1.1;
    box-shadow: 2px 2px 4px 2px rgb(115, 96, 124);
}

.bottom {

    text-align: center; 
    padding: 50px;
    font-size: 1.4rem;
    color: rgb(115, 96, 124);
}

